Add Hover Effects and Polish

--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
         <li class="letter-key"><div class="letter">L</div></li>
         <li class="letter-key">:<br>;</li>
         <li class="letter-key">"<br>'</li>
-        <li>enter<br>return</li>
+        <li id="enter-return"><small>enter</small><br>return</li>
       </ul>
       <ul id="keyboard-fifth-row">
         <li class="shift-key">shift</li>
         <li class="letter-key"><div class="letter">Z</div></li>
-        <li class="letter-key"><div class="letter">X</div></li>
         <li class="letter-key"><div class="letter">X</div></li>
         <li class="letter-key"><div class="letter">C</div></li>
         <li class="letter-key"><div class="letter">V</div></li>
