Key Transitions, Refactor CSS, Polish Keyboard

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <li class="number-key">*<br>8</li>
         <li class="number-key">(<br>9</li>
         <li class="number-key">)<br>0</li>
-        <li class="number-key">_<br>-</li>
-        <li class="number-key">+<br>=</li>
+        <li class="special-character-key">_<br>-</li>
+        <li class="special-character-key">+<br>=</li>
         <li class="delete-key">delete<br></li>
       </ul>
       <ul id="keyboard-third-row">
@@ -52,9 +52,9 @@
         <li class="letter-key"><div class="letter">I</div></li>
         <li class="letter-key"><div class="letter">O</div></li>
         <li class="letter-key"><div class="letter">P</div></li>
-        <li class="letter-key">{<br>[</li>
-        <li class="letter-key">}<br>]</li>
-        <li class="letter-key">|<br>\</li>
+        <li class="special-character-key">{<br>[</li>
+        <li class="special-character-key">}<br>]</li>
+        <li class="special-character-key">|<br>\</li>
       </ul>
       <ul id="keyboard-fourth-row">
         <li class="caps-lock">caps lock</li>
@@ -67,8 +67,8 @@
         <li class="letter-key"><div class="letter">J</div></li>
         <li class="letter-key"><div class="letter">K</div></li>
         <li class="letter-key"><div class="letter">L</div></li>
-        <li class="letter-key">:<br>;</li>
-        <li class="letter-key">"<br>'</li>
+        <li class="special-character-key">:<br>;</li>
+        <li class="special-character-key">"<br>'</li>
         <li id="enter-return"><small>enter</small><br>return</li>
       </ul>
       <ul id="keyboard-fifth-row">
@@ -80,19 +80,19 @@
         <li class="letter-key"><div class="letter">B</div></li>
         <li class="letter-key"><div class="letter">N</div></li>
         <li class="letter-key"><div class="letter">M</div></li>
-        <li class="letter-key"><<br>,</li>
-        <li class="letter-key">><br>.</li>
-        <li class="letter-key">?<br>/</li>
+        <li class="special-character-key"><<br>,</li>
+        <li class="special-character-key">><br>.</li>
+        <li class="special-character-key">?<br>/</li>
         <li class="shift-key">shift</li>
       </ul>
       <ul id="keyboard-sixth-row">
-        <li>fn</li>
-        <li>control</li>
-        <li>alt<br>option</li>
-        <li>&#8984;<br>command</li>
+        <li id="fn-key">fn</li>
+        <li id="control-key">control</li>
+        <li class="option-key"><small>alt</small><br>option</li>
+        <li class="command-key">&#8984;<br>command</li>
         <li id="spacebar"></li>
-        <li>&#8984;<br>command</li>
-        <li>alt<br>option</li>
+        <li class="command-key">&#8984;<br>command</li>
+        <li class="option-key">alt<br>option</li>
         <li><</li>
         <li>^<br>V</li>
         <li>></li>
