Added Directional Keys, Polish Last Row

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <title>Photoshop Keyboard Shortcuts</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script type="text/javascript" src="http://fast.fonts.net/jsapi/61c4f761-516f-4dfb-8db7-a8dc9e59d0ca.js"></script>
   </head>
   <body>
     <h1 id="keyboard-shortcuts-logo">&#8984;</h1>
     <div class="keyboard">
       <ul id="keyboard-first-row">
-        <li>esc</li>
+        <li class="text-center">esc</li>
         <li><span class="function-key">F1</span></li>
         <li><span class="function-key">F2</span></li>
         <li><span class="function-key">F3</span></li>
@@ -89,13 +90,14 @@
         <li id="fn-key">fn</li>
         <li id="control-key">control</li>
         <li class="option-key"><small>alt</small><br>option</li>
-        <li class="command-key">&#8984;<br>command</li>
+        <li class="command-key"><div class="text-right">&#8984;</div><br>command</li>
         <li id="spacebar"></li>
-        <li class="command-key">&#8984;<br>command</li>
-        <li class="option-key">alt<br>option</li>
-        <li><</li>
-        <li>^<br>V</li>
-        <li>></li>
+        <li class="command-key"><div class="text-left">&#8984;</div><br>command</li>
+        <li class="option-key text-right">alt<br>option</li>
+        <li id="left-key"><img src="img/left.png"></li>
+        <li id="up-key"><img src="img/up.png"></li>
+        <li id="down-key"><img src="img/down.png"></li>
+        <li id="right-key"><img src="img/right.png"></li>
       </ul>
     </div>
   </body>
